# sql-lineage-tracker

./: .gitignore  README.md  pyproject.toml
examples/sql/: 01_raw_customers.sql  02_raw_orders.sql  03_raw_products.sql  04_raw_order_items.sql  05_stg_customers.sql  06_stg_orders.sql  07_int_order_summary.sql  08_mart_customer_360.sql  09_complex_financial_report.sql  10_inline_subquery_test.sql  11_custom_function_test.sql  12_window_groupby_test.sql  13_pivot_unpivot_test.sql  14_explicit_pivot_test.sql  15_test_bug_01.sql  16_test_union_bug.sql  17_test_union_2.sql  18_complex_joins_cte.sql  19_coalesce_and_case.sql  20_subqueries_multi_level.sql  21_except_intersect_combination.sql  99_massive_union_pipeline.sql
src/sql_lineage/: __init__.py  __main__.py  cli.py  lineage_tracker.py  models.py  parser.py  tracker.py  type_inference.py
src/sql_lineage/renderers/: __init__.py  graphviz_renderer.py  html_renderer.py
